--- a/src/app/components/forms/shared/wallet-payment-record-table/wallet-payment-record-table.component.html
+++ b/src/app/components/forms/shared/wallet-payment-record-table/wallet-payment-record-table.component.html
@@ -2,19 +2,23 @@
   [value]="paymentHistory()"
   [styleClass]="'p-datatable-sm p-datatable-striped'"
   [responsiveLayout]="'scroll'"
->
+  >
   <ng-template pTemplate="header">
     <tr>
-      <th *ngFor="let c of columns">
-        {{ c.label }}
-      </th>
+      @for (c of columns; track c) {
+        <th>
+          {{ c.label }}
+        </th>
+      }
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-row>
     <tr>
-      <td *ngFor="let c of columns">
-        {{ row[c.key] }}
-      </td>
+      @for (c of columns; track c) {
+        <td>
+          {{ row[c.key] }}
+        </td>
+      }
     </tr>
   </ng-template>
 </p-table>
