--- a/src/app/components/forms/shared/wallet-transactions-table/wallet-transactions-table.component.html
+++ b/src/app/components/forms/shared/wallet-transactions-table/wallet-transactions-table.component.html
@@ -1,19 +1,23 @@
 <p-table
   [value]="transactions()"
   [responsiveLayout]="'scroll'"
->
+  >
   <ng-template pTemplate="header">
     <tr>
-      <th *ngFor="let c of columns">
-        {{ c.label }}
-      </th>
+      @for (c of columns; track c) {
+        <th>
+          {{ c.label }}
+        </th>
+      }
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-row>
     <tr [class]="getRowColor(row.TransactionColor)">
-      <td *ngFor="let c of columns" class="white-space-nowrap">
-        {{ row[c.key] }}
-      </td>
+      @for (c of columns; track c) {
+        <td class="white-space-nowrap">
+          {{ row[c.key] }}
+        </td>
+      }
     </tr>
   </ng-template>
 </p-table>
