--- a/src/app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component.html
+++ b/src/app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component.html
@@ -1,55 +1,62 @@
-<div *ngIf="!isLoading">
-  <div class="card">
-     <form class="col-12" (ngSubmit)="getUserAccessMenu()" [class.pointer-events-none]="isLoading"
-    [class.opacity-60]="isLoading" [formGroup]="searchForm">
-    <!-- Search Phone + Refresh -->
-    <div class="flex gap-2">
-      <app-text-input class="flex-1" placeholder="جستجو کاربر" addonWidth="7rem" [control]="searchPhone"  validationField="mobile" label="شماره موبایل"/>
-      <p-button type="submit" icon="pi pi-search" styleClass="mt-1 w-2rem h-2rem border-circle"
-        (click)="getUserAccessMenu()" [disabled]="this.searchForm.invalid || isLoading" />
+@if (!isLoading) {
+  <div>
+    <div class="card">
+      <form class="col-12" (ngSubmit)="getUserAccessMenu()" [class.pointer-events-none]="isLoading"
+        [class.opacity-60]="isLoading" [formGroup]="searchForm">
+        <!-- Search Phone + Refresh -->
+        <div class="flex gap-2">
+          <app-text-input class="flex-1" placeholder="جستجو کاربر" addonWidth="7rem" [control]="searchPhone"  validationField="mobile" label="شماره موبایل"/>
+          <p-button type="submit" icon="pi pi-search" styleClass="mt-1 w-2rem h-2rem border-circle"
+            (click)="getUserAccessMenu()" [disabled]="this.searchForm.invalid || isLoading" />
+        </div>
+      </form>
+      <app-search-input
+        (rawInput)="tt.filter($any($event), 'PGTitle', 'contains')"
+        [autoTriggerSearch]="true"
+      ></app-search-input>
+      <p-treetable
+        #tt
+        [value]="accessTable"
+        [columns]="cols"
+        selectionMode="checkbox"
+        [(selectionKeys)]="selectedNodes"
+        dataKey="key"
+        >
+        <ng-template #header let-columns>
+          <tr>
+            @for (col of columns; track col) {
+              <th>
+                {{ col.header }}
+              </th>
+            }
+          </tr>
+        </ng-template>
+        <ng-template
+          #body
+          let-rowNode
+          let-rowData="rowData"
+          let-columns="columns"
+          >
+          <tr [ttRow]="rowNode" [ttSelectableRow]="rowNode">
+            @for (col of columns; track col; let i = $index) {
+              <td>
+                @if (i === 0) {
+                  <p-treetable-toggler [rowNode]="rowNode" />
+                }
+                @if (i === 0) {
+                  <p-treetable-checkbox [value]="rowNode" />
+                }
+                {{ rowData[col.field] }}
+              </td>
+            }
+          </tr>
+        </ng-template>
+      </p-treetable>
+      <p-button
+        class="flex flex-column m-2"
+        label="ثبت تغییرات"
+        (onClick)="SaveChanges()"
+        />
     </div>
-  </form>
-    <app-search-input
-      (rawInput)="tt.filter($any($event), 'PGTitle', 'contains')"
-      [autoTriggerSearch]="true"
-    ></app-search-input>
-
-    <p-treetable
-      #tt
-      [value]="accessTable"
-      [columns]="cols"
-      selectionMode="checkbox"
-      [(selectionKeys)]="selectedNodes"
-      dataKey="key"
-    >
-      <ng-template #header let-columns>
-        <tr>
-          <th *ngFor="let col of columns">
-            {{ col.header }}
-          </th>
-        </tr>
-      </ng-template>
-
-      <ng-template
-        #body
-        let-rowNode
-        let-rowData="rowData"
-        let-columns="columns"
-      >
-        <tr [ttRow]="rowNode" [ttSelectableRow]="rowNode">
-          <td *ngFor="let col of columns; let i = index">
-            <p-treetable-toggler [rowNode]="rowNode" *ngIf="i === 0" />
-            <p-treetable-checkbox [value]="rowNode" *ngIf="i === 0" />
-            {{ rowData[col.field] }}
-          </td>
-        </tr>
-      </ng-template>
-    </p-treetable>
-
-    <p-button
-      class="flex flex-column m-2"
-      label="ثبت تغییرات"
-      (onClick)="SaveChanges()"
-    />
   </div>
-</div>
+}
