refactor(core): update dependencies to Angular v20 and fix issues caused by upgrade

--- a/src/app/components/shared/tab-view/tab-view.component.html
+++ b/src/app/components/shared/tab-view/tab-view.component.html
@@ -4,7 +4,7 @@
   <p-tabs [(value)]="activeIndex" (valueChange)="onTabChange($event)">
     <div class="w-full overflow-x-auto">
       <p-tablist>
-        @for (view of tabConfig?.subTab; track $index) {
+        @for (view of tabConfig.subTab; track $index) {
           <p-tab class="text-sm" [value]="$index">{{ view.title }}</p-tab>
         }
       </p-tablist>
