--- a/src/app/components/shared/inputs/text-input/text-input.component.html
+++ b/src/app/components/shared/inputs/text-input/text-input.component.html
@@ -77,13 +77,11 @@
 
   @if (buttonIcon.trim() !== '') {
     <!-- Button Addon -->
-    <p-inputgroup-addon class="flex items-center justify-center">
+    <p-inputgroup-addon class="flex h-2-5rem">
       <p-button
         [icon]="buttonIcon"
         [disabled]="buttonDisabled"
         (click)="handleClick()"
-        styleClass="border-round-left h-full w-full"
-        class="w-full h-full"
       />
     </p-inputgroup-addon>
   }
