refactor(dashboard): integrate new tab-manager system and move logic to dashboard-context-manager

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,15 +1,35 @@
-<app-header [headerData]="headerData" />
-<app-sidebar [menuItems]="menuItems">
-  <div class="my-12 lg:my-2 p-6">
-    <app-sub-menu [hidden]="!subMenuVisible" [processes]="webProcesses" />
-    <div [hidden]="subMenuVisible">
-      <ng-template #tabView></ng-template>
-    </div>
-  </div>
-</app-sidebar>
+<div class="h-screen flex flex-col">
+  <!-- Header -->
+  <header [style.height]="layoutUi.headerHeight" class="shrink-0">
+    <app-header />
+  </header>
 
-<app-support-button></app-support-button>
+  <!-- Main -->
+  <main class="flex flex-1 overflow-hidden">
+    <!-- Sidebar -->
+    <aside
+      [class]="layoutUi.sidebarWidth"
+      class="shrink-0 overflow-y-auto"
+    >
+      <app-sidebar [pageGroupItems]="pageGroups" />
+    </aside>
 
-<div class="fixed w-full bottom-0 z-10">
-  <app-footer />
+    <!-- Content -->
+    <section class="flex flex-col flex-1 overflow-hidden">
+      <div class="shrink-0">
+        <app-tab-manager  />
+      </div>
+      <div class="overflow-y-auto flex-1">
+        <app-dashboard-content-manager />
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer
+    [style.height]="layoutUi.footerHeight"
+    class="shrink-0 overflow-hidden"
+  >
+    <app-footer class="w-full" />
+  </footer>
 </div>
