--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.html
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.html
@@ -1,4 +1,4 @@
-<div class="overflow-hidden">
+<div class="overflow-hidden hidden  lg:block" >
   <div class="overflow-x-auto w-full">
     <div class="flex flex-nowrap min-w-max border-b border-gray-300">
       @for (tab of tabs.values(); track tab.id) {
@@ -6,7 +6,7 @@
         <div>
           <div
             (click)="onClickTab(tab)"
-            class="flex gap-2 pl-10 pr-2 py-2 cursor-pointer transition-all duration-300"
+            class="flex gap-2 pl-10 rounded-t-3xl pr-2 py-2 cursor-pointer transition-all duration-300"
             [ngClass]="{
               'bg-emphasis text-primary-emphasis shadow-md':
                 selectTab().id === tab.id,
@@ -21,7 +21,7 @@
         @if (tab.closeable) {
         <button
           (click)="closeTab(tab.id)"
-          class="absolute top-0.5 left-0.5 scale-80 text-red-400 hover:text-red-600 hover:scale-90 transition-transform duration-300"
+          class="absolute top-0.5 left-2 scale-80 text-red-400 hover:text-red-600 hover:scale-90 transition-transform duration-300"
           [title]="`بستن تب ${tab.title}`"
         >
           <i class="pi pi-times"></i>
