--- a/src/app/themes/theme.scss
+++ b/src/app/themes/theme.scss
@@ -1,4 +1,8 @@
 // استایل‌های سراسری تم را در اینجا اضافه کنید
+@layer theme, base, components, utilities;
+@import "tailwindcss/theme.css" layer(theme);
+@import "tailwindcss/preflight.css" layer(base);
+
 .h-2-5rem {
   height: 2.5rem;
 }
@@ -65,3 +69,16 @@
   z-index: 20 !important;
 }
 
+@each $type in (primary, danger, secondary, success, info, help, warn) {
+  .bg-button-#{$type} {
+    background-color: var(--p-button-#{$type}-background);
+  }
+
+  .hover\:bg-button-#{$type}-hover:hover {
+    background-color: var(--p-button-#{$type}-hover-background);
+  }
+
+  .text-button-#{$type} {
+    color: var(--p-button-text-#{$type}-color);
+  }
+}
