--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,30 +3,103 @@
   src: url("/fonts/yekan-regular.eot") format("eot"),
     url("/fonts/yekan-regular.ttf") format("ttf"),
     url("/fonts/yekan-regular.woff") format("woff"),
-    url("/fonts/Yekan.eot") format("eot"),
-    url("/fonts/Yekan.svg") format("svg"),
+    url("/fonts/Yekan.eot") format("eot"), url("/fonts/Yekan.svg") format("svg"),
     url("/fonts/Yekan.ttf") format("ttf"),
     url("/fonts/Yekan.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
-// @font-face {
-//   font-family: "Yekan";
-//   src: url("/fonts/yekan-regular.eot") format("eot"),
-//     url("fonts/yekan-regular.ttf") format("ttf"),
-//     url("fonts/yekan-regular.woff") format("woff"),
-//     url("fonts/Yekan.eot") format("eot"),
-//     url("fonts/Yekan.svg") format("svg"),
-//     url("fonts/Yekan.ttf") format("ttf"),
-//     url("fonts/Yekan.woff") format("woff");
-//   font-weight: normal;
-//   font-style: normal;
-// }
+/* src/styles/fonts.scss or styles.scss */
+
+@font-face {
+  font-family: "Vazirmatn";
+  src: url("/fonts/vazirmatn/Vazirmatn-RD-FD-Thin.woff2") format("woff2");
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  src: url("/fonts/vazirmatn/Vazirmatn-RD-FD-ExtraLight.woff2") format("woff2");
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  src: url("/fonts/vazirmatn/Vazirmatn-RD-FD-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  src: url("/fonts/vazirmatn/Vazirmatn-RD-FD-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  src: url("/fonts/vazirmatn/Vazirmatn-RD-FD-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  src: url("/fonts/vazirmatn/Vazirmatn-RD-FD-SemiBold.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  src: url("/fonts/vazirmatn/Vazirmatn-RD-FD-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  src: url("/fonts/vazirmatn/Vazirmatn-RD-FD-ExtraBold.woff2") format("woff2");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  src: url("/fonts/vazirmatn/Vazirmatn-RD-FD-Black.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Yekan";
+  src: url("/fonts/yekan-regular.eot") format("eot"),
+    url("fonts/yekan-regular.ttf") format("ttf"),
+    url("fonts/yekan-regular.woff") format("woff"),
+    url("fonts/Yekan.eot") format("eot"),
+    url("fonts/Yekan.svg") format("svg"),
+    url("fonts/Yekan.ttf") format("ttf"),
+    url("fonts/Yekan.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 
 html,
 body {
-  font-family: "Yekan", sans-serif;
+  font-family: "Vazirmatn", "Yekan", sans-serif;
   padding: 0;
   margin: 0;
   -webkit-user-select: none; /* Safari */
