feat(theme): add persistent theme toggle and integrate into header

--- a/src/app/components/shared/layout/header/header/header.component.html
+++ b/src/app/components/shared/layout/header/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="relative w-full h-full bg-primary text-primary-contrast lg:pr-4 py-2 z-15 flex items-center lg:justify-between">
+<div class="relative w-full h-full bg-primary text-primary-contrast lg:pr-4 py-2 z-15 flex items-center justify-between">
   <p-button class="lg:hidden" (onClick)="openSidebar()">
     <i class="pi pi-align-right text-xl"></i>
   </p-button>
@@ -6,8 +6,9 @@
     <i class="pi text-xl scale-120" [class]="headerData.icon"></i>
     <span class="text-xl font-bold">{{ headerData.title }}</span>
   </div>
-  <div class="hidden lg:flex lg:flex-row-reverse lg:items-center lg:justify-center lg:px- lg:gap-2 lg:px-2">
-    <app-user-profile [profile]="profile" />
-    <app-wallet-profile [wallet]="wallet" />
+  <div class="lg:flex flex-row-reverse items-center justify-center gap-2 px-2">
+    <app-user-profile [profile]="profile" class="hidden lg:block" />
+    <app-wallet-profile [wallet]="wallet" class="hidden lg:block"/>
+    <app-theme-management />
   </div>
 </div>
