--- a/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.html
+++ b/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.html
@@ -14,9 +14,15 @@
 
 } @else {
 <!-- Sidebar -->
-<div class="w-full h-full pl-2.5">
-  <div class="w-full h-full overflow-auto rounded-none shadow-lg">
-    <app-sidebar-page-group [pageGroupItems]="pageGroupItems" />
-  </div>
+<div class="h-full w-full pl-2" dir="ltr">
+  <div dir="ltr" class="flex flex-col justify-between w-full h-full overflow-auto rounded-none shadow-lg">
+    <div>
+      <app-search-processes dir="rtl" />
+      <app-sidebar-page-group [pageGroupItems]="pageGroupItems" dir="rtl" />
+    </div>
+    <div dir="rtl">
+      <app-logo />
+    </div>
+  </div>`
 </div>
 }
