feat(component/shared/page)[dashboard]: add support button
The support butten was removed. I added again.

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -25,6 +25,8 @@
     </section>
   </main>
 
+  <app-support-button></app-support-button>
+
   <!-- Footer -->
   <footer
     [style.height]="layoutUi.footerHeight"
