--- a/src/app/components/shared/main-view/carousel/carousel.component.html
+++ b/src/app/components/shared/main-view/carousel/carousel.component.html
@@ -7,7 +7,7 @@
   [circular]="customCarouselTokens().circular"
   [autoplayInterval]="customCarouselTokens().autoplayInterval"
   [dt]="customCarouselTokens()"
-  class="w-full items-center"
+  class="w-full items-center mb-[2rem]"
 >
   <ng-template #item let-product>
     <div class="w-auto m-3 rounded-2xl shadow-[0_0_10px_rgba(0,0,0,1)]">
