--- a/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
+++ b/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
@@ -1,7 +1,8 @@
-<div class="fixed -translate-x-1/2 left-1/2 bottom-0 w-full h-22">
+<div
+  class="fixed flex justify-center items-center -translate-x-1/2 left-1/2 bottom-0 w-full h-22"
+>
   <div
-    class="w-full h-full flex justify-around items-center rounded-t-4xl
-     bg-primary-emphasis text-primary-contrast"
+    class="w-full h-full flex justify-around items-center bg-primary-emphasis text-primary-contrast"
   >
     @for (tab of tabs(); track $index) {
     <div
@@ -17,13 +18,17 @@
         [icon]="`pi ${tab.icon}`"
         [rounded]="true"
         [severity]="isTabActive(tab) ? 'info' : 'secondary'"
-        class="transition-all duration-500 ease-in-out"
+        class="transition-transform duration-500 ease-in-out"
         [ngClass]="{
-          'scale-170 sm:scale-180 bg-info border-3 border-primary-emphasis': isTabActive(tab),
+          'scale-170 sm:scale-180 bg-info border-2 border-primary-emphasis':
+            isTabActive(tab),
           'scale-120 sm:scale-130 bg-secondary': !isTabActive(tab)
         }"
       ></button>
-      <span class="text-sm transition-colors duration-300 ease-in-out">
+      <span
+        class="text-sm transition-colors duration-300 ease-in-out"
+        [ngClass]="{ 'font-bold text-2xl': isTabActive(tab) }"
+      >
         {{ tab.title }}
       </span>
     </div>
