--- a/src/app/components/shared/main-view/main-view.component.html
+++ b/src/app/components/shared/main-view/main-view.component.html
@@ -1,5 +1,6 @@
-<app-carousel [images]="images"></app-carousel>
-<!-- <app-button
+<div class="flex justify-center items-cente m-[-2rem]">
+  <app-carousel [images]="images"></app-carousel>
+  <!-- <app-button
   [severity]="'info'"
   [syncShadow]="true"
   label="hello"
@@ -9,47 +10,47 @@
   [icon]="'pi-check'"
   [type]="'submit'"
 ></app-button> -->
+</div>
 <!-- <hr class="border-2 border-gray-300 rounded-full my-2" /> -->
-<div class="flex flex-col items-center">
+<div class="flex flex-col items-center mx-[-2rem]">
   <div
-    class="flex justify-center mt-5 w-[110%] rounded-t-2xl shadow-[0px_-8px_7px_1px_rgba(0,0,0,0.2)] bg-white"
+    class="flex justify-center mt-5 w-full rounded-t-2xl shadow-[0px_-8px_7px_1px_rgba(0,0,0,0.2)] dark:shadow-[0px_-8px_7px_1px_rgba(255,255,255,0.2)]"
   >
     <span class="font-bold text-2xl mt-3">خدمات</span>
   </div>
-  <div class="flex w-full justify-center gap-10 mt-5 flex-wrap">
-    @for (item of process; track $index) {
+  <div
+    class="flex w-full justify-center gap-4 lg:gap-8 mt-5 flex-wrap px-[1rem] md:px-[5rem]"
+  >
+    @for (item of processes(); track $index) {
     <p-card
-      class="w-[10rem] bg-gray-200 dark:bg-gray-500 rounded-4xl transition-all duration-150 ease-in-out hover:scale-110"
+      class="flex justify-center md:w-[12rem] lg:w-[18rem] w-[6rem] lg:h-[10rem] shadow-[0px_0px_7px_rgba(0,0,0,0.7)] bg-gray-100 dark:bg-gray-500 rounded-2xl transition-all duration-150 ease-in-out hover:scale-110"
     >
       <div
-        class="flex flex-col text-center justify-center items-center"
+        class="flex flex-col text-center justify-center items-center mx-[-1rem] my-[-0.5rem]"
         (click)="OpenProcess(item)"
       >
         @if ($index <1) {
         <i
-          class="pi text-orange-500 bg-yellow-100 text-3xl p-6 rounded-full"
-          [class]="item.PIconName"
+          class="pi text-orange-500 bg-yellow-100 lg:text-4xl text-2xl p-4 rounded-full"
+          [class]="item.icon"
         ></i>
-        <span class="font-bold text-xl">{{ item.PTitle }}</span>
-        }@else if ($index < 5) {
+        }@else if ($index <5) {
         <i
-          class="pi bg-red-200 text-red-600 text-3xl p-6 rounded-full"
-          [class]="item.PIconName"
+          class="pi text-blue-700 bg-blue-200 lg:text-4xl text-2xl p-4 rounded-full"
+          [class]="item.icon"
         ></i>
-        <span class="font-bold text-xl">{{ item.PTitle }}</span>
-        }@else if ($index < 10) {
+        }@else if ($index <10) {
         <i
-          class="pi bg-blue-200 text-blue-700 text-3xl p-6 rounded-full"
-          [class]="item.PIconName"
+          class="pi text-green-700 bg-green-200 lg:text-4xl text-2xl p-4 rounded-full"
+          [class]="item.icon"
         ></i>
-        <span class="font-bold text-xl">{{ item.PTitle }}</span>
         }@else {
         <i
-          class="pi bg-emerald-200 text-green-800 text-3xl p-6 rounded-full"
-          [class]="item.PIconName"
+          class="pi text-red-700 bg-red-200 lg:text-4xl text-2xl p-4 rounded-full"
+          [class]="item.icon"
         ></i>
-        <span class="font-bold text-xl">{{ item.PTitle }}</span>
         }
+        <span class="font-bold text-xs lg:text-xl">{{ item.title }}</span>
       </div>
     </p-card>
     }
