feat(components/shared)[button]: update button
Now button support custom style

--- a/src/app/components/shared/button/button.component.html
+++ b/src/app/components/shared/button/button.component.html
@@ -1,6 +1,6 @@
 <button
   pButton
-  class="{{ class() }}"
+  [class]="class() + ' ' + (styleClass || '')"
   [disabled]="disabled"
   (click)="handleClick()"
   [type]="type"
