--- a/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.html
+++ b/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.html
@@ -4,18 +4,28 @@
 </ng-template>
 
 @if (isMobile) {
-<p-drawer
-  (onHide)="onDrawerClose()"
-  [visible]="(isOpen$ | async) ?? false"
-  position="right"
->
-  <app-sidebar-page-group [pageGroupItems]="pageGroupItems" />
-</p-drawer>
-
+  <p-drawer
+    (onHide)="onDrawerClose()"
+    [visible]="(isOpen$ | async) ?? false"
+    position="right"
+  >
+    <div
+      dir="rtl"
+      class="flex flex-col justify-between w-full h-full rounded-none"
+    >
+      <app-sidebar-page-group [pageGroupItems]="pageGroupItems" />
+      <div class="flex flex-col items-center">
+        <app-logo />
+      </div>
+    </div>
+  </p-drawer>
 } @else {
 <!-- Sidebar -->
 <div class="h-full w-full pl-2" dir="ltr">
-  <div dir="ltr" class="flex flex-col justify-between w-full h-full overflow-auto rounded-none shadow-lg">
+  <div
+    dir="ltr"
+    class="flex flex-col justify-between w-full h-full overflow-auto rounded-none shadow-lg"
+  >
     <div>
       <app-search-processes dir="rtl" />
       <app-sidebar-page-group [pageGroupItems]="pageGroupItems" dir="rtl" />
@@ -23,6 +33,7 @@
     <div dir="rtl">
       <app-logo />
     </div>
-  </div>`
+  </div>
+  `
 </div>
 }
