--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.html
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.html
@@ -1,4 +1,4 @@
-<div class="overflow-hidden hidden  lg:block" >
+<div class="overflow-hidden hidden lg:block">
   <div class="overflow-x-auto w-full">
     <div class="flex flex-nowrap min-w-max border-b border-gray-300">
       @for (tab of tabs.values(); track tab.id) {
@@ -6,15 +6,16 @@
         <div>
           <div
             (click)="onClickTab(tab)"
-            class="flex gap-2 pl-10 rounded-t-3xl pr-2 py-2 cursor-pointer transition-all duration-300"
+            class="flex gap-2 pl-10 rounded-t-2xl pr-2 py-2 cursor-pointer transition-all ease-in-out duration-300 border-1"
             [ngClass]="{
-              'bg-emphasis text-primary-emphasis shadow-md':
+              'bg-highlight-emphasis text-shadow-primary-emphasis border-primary font-bold text-sm':
                 selectTab().id === tab.id,
-              'hover:bg-emphasis': selectTab().id !== tab.id
+              'hover:bg-highlight-emphasis  border-transparent text-xs':
+                selectTab().id !== tab.id
             }"
           >
             <i class="pi" [class]="tab.icon"></i>
-            <span class="text-xs font-medium">{{ tab.title }}</span>
+            <span>{{ tab.title }}</span>
           </div>
         </div>
 
