--- a/src/app/components/shared/layout/sidebar/logo/logo.component.html
+++ b/src/app/components/shared/layout/sidebar/logo/logo.component.html
@@ -1,3 +1,10 @@
-<div class="h-40 w-full flex items-center justify-center">
-    <img src="/assets/rmto-logo.png" class="object-cover h-full" alt="RMTO Logo" />
+<div class="flex flex-col items-center h-50">
+  <div class="h-40 w-full flex justify-center">
+    <img
+      src="/assets/rmto-logo.png"
+      class="object-cover h-full"
+      alt="RMTO Logo"
+    />
+  </div>
+  <span class="text-center text-xs font-bold" [innerHTML]="websiteTitle"></span>
 </div>
