fix(components/layout/header)[header.component.html]: update header title font size
- Changed the font size of the header title from `text-xl` to `text-md`.

--- a/src/app/components/shared/layout/header/header/header.component.html
+++ b/src/app/components/shared/layout/header/header/header.component.html
@@ -4,7 +4,7 @@
   </p-button>
   <div class="flex items-center justify-center gap-4 m-auto lg:m-0">
     <i class="pi text-xl scale-120" [class]="headerData.icon"></i>
-    <span class="text-xl font-bold">{{ headerData.title }}</span>
+    <span class="text-md font-bold">{{ headerData.title }}</span>
   </div>
   <div class="lg:flex flex-row-reverse items-center justify-center gap-2 px-2">
     <app-user-profile [profile]="profile" class="hidden lg:block" />
