feat(components/shared/main-view/carousel)[carousel.*]: update carousel component
- Implemented skeleton loader for when no images are present.
- The `images` input is now a signal.
- Added `enableSkeleton` input to control the skeleton loader.
- Added `screenSize` and `skeletonNumber` signals for responsive
behavior.
- Added `screenFounder` and `skeletonHandler` methods to manage screen
size and skeleton count.
- The `circularHandler` now uses `forEach` and the new `screenSize`
signal.
- Responsive options have been expanded to include more breakpoints.
- Added `@if` block in HTML to conditionally display the skeleton
loader.
- The `carousel` now uses `images()` to access the signal value.
- Added `Skeleton` to the imports in the TS file and the `p-skeleton`
component in the HTML.
- Implemented `skeletonArrayNumber` getter to generate the array for the
skeleton loader.

--- a/src/app/components/shared/main-view/carousel/carousel.component.html
+++ b/src/app/components/shared/main-view/carousel/carousel.component.html
@@ -1,5 +1,22 @@
+@if (images().length === 0) {
+<div class="flex w-screen justify-center gap-4 my-[1rem] px-[3rem] mb-10">
+  @for (item of skeletonArrayNumber; track $index) {
+  <p-skeleton
+    [style]="{
+      height: '12rem',
+      'min-height': '10rem',
+      'max-height': '20rem',
+      width: '100%',
+      'min-width': '10rem',
+      'max-width': '20rem'
+    }"
+    borderRadius="16px"
+  />
+  }
+</div>
+}@else {
 <p-carousel
-  [value]="images"
+  [value]="images()"
   [numVisible]="3"
   [numScroll]="3"
   [circular]="false"
@@ -19,3 +36,4 @@
     </div>
   </ng-template>
 </p-carousel>
+}
